--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,10 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^3.2.3",
+    "nodemon": "^2.0.22",
     "sequelize": "^6.31.0"
   }
 }
